# european-tech-opportunities-2027

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: add-position.yml  config.yml
.github/workflows/: backfill-posted-at.yml  canonical-state-drill.yml  check-availability.yml  ci.yml  docker-ci.yml  nightly.yml  python-ci.yml  scrape.yml  site-ci.yml
configs/: categories.yml  settings.example.yml
configs/searches/companies/: amazon.yml  amd.yml  apple.yml  arm.yml  bloomberg.yml  canonical.yml  cisco.yml  google.yml  intel.yml  meta.yml  microsoft.yml  nvidia.yml  qualcomm.yml
configs/searches/countries/: austria.yml  belgium.yml  bulgaria.yml  croatia.yml  cyprus.yml  czechia.yml  denmark.yml  estonia.yml  finland.yml  france.yml  germany.yml  greece.yml  hungary.yml  iceland.yml  ireland.yml  italy.yml  latvia.yml  lithuania.yml  luxembourg.yml  malta.yml  netherlands.yml  norway.yml  poland.yml  portugal.yml  romania.yml  serbia.yml  slovakia.yml  slovenia.yml  spain.yml  sweden.yml  ukraine.yml  (+2 more)
docs/: architecture.md  automation.md  configuration.md  database.md  development.md  docker.md  search-registry.md  troubleshooting.md
docs/md/: README.md
migrations/: env.py  script.py.mako
migrations/versions/: 8b4e2f3a1c90_focused_linkedin_pipeline.py  f2b8d4c61a90_normalize_opportunity_employment_types.py
scripts/: canonical_snapshot.py  canonical_state_store.sh  check_docs.py  check_migrations.py
site/: .env.example  .prettierignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json
site/scripts/: start.mjs
src/internships/: __init__.py  readme.py  search_registry_docs.py
src/opportunities/: readme.py  search_registry_docs.py
tests/: conftest.py
tests/benchmarks/: test_parsing_classification.py
tests/fixtures/: linkedin_job_detail_1111111111.html  linkedin_job_detail_2222222222.html  linkedin_job_detail_3333333333.html
tests/integration/: test_availability.py  test_cli.py  test_readme.py  test_runner.py
tests/unit/: test_backfill.py  test_classification.py  test_config.py  test_http.py  test_linkedin.py  test_migrations.py  test_snapshots.py  test_url.py
(+98 files in other folders)
