[project]
name = "european-tech-internships-2027"
version = "0.1.0"
description = "LinkedIn to SQLite to README pipeline for 2027 European technology internships"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "European Tech Internships contributors" }]
keywords = ["internships", "europe", "data-pipeline", "scraping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "alembic>=1.13.2,<2",
  "beautifulsoup4>=4.12.3,<5",
  "httpx>=0.27.0,<1",
  "pydantic>=2.8.2,<3",
  "python-dotenv>=1.0.1,<2",
  "pyyaml>=6.0.2,<7",
  "rich>=13.7.1,<15",
  "sqlalchemy>=2.0.31,<3",
  "typer>=0.12.3,<1",
]

[project.urls]
Repository = "https://github.com/simonesiega/european-tech-internships-2027"
Issues = "https://github.com/simonesiega/european-tech-internships-2027/issues"

[project.scripts]
internships = "internships.cli.app:app"

[dependency-groups]
dev = [
  "mypy>=1.11.1,<2",
  "pytest>=9.1.1,<10",
  "ruff>=0.6.2,<1",
  "types-beautifulsoup4>=4.12.0.20240511",
  "types-pyyaml>=6.0.12.20240808",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internships"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "DTZ", "LOG", "G", "PIE", "PT", "RET", "RUF", "SIM", "T20"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations/versions"]

[[tool.mypy.overrides]]
module = ["bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "live: optional tests that access public websites (disabled unless explicitly selected)",
]
filterwarnings = ["error"]
